--- a/cv.html
+++ b/cv.html
@@ -10,10 +10,10 @@
         <div class="container mt-5 ">
            <div class="row">
              <div class="col-8 col-mt-8 col-lg-8 text-left">
-               <b>Hridaya Akter</b><br> 
-               hridayaakter@gmail.com<br>
+               <b>Hridaya Akter </b><br> 
+               Hridaya Akter@gmail.com<br>
                +8801321566650<br>
-               Gopalgonj, Bangladesh
+               Rajshahi, Bangladesh
              </div>
              
               <div class="col-4 col-mt-4 col-lg-4"text-align="right">
@@ -23,7 +23,7 @@
           <div class="cal-12">
             <h3>summery</h3><hr>
             <p class="text-justify">
-              Proficient in various computer applications and tools, including Microsoft Office Suite, email systems, and web browsers. Familiar with basic troubleshooting, data entry, file management, and system navigation. Able to quickly adapt to new software and technologies with a strong foundation in digital literacy and problem-solving skills. 
+              Highly organized and proactive student with excellent communication skills and a strong work ethic. Proven ability to work well in team environments and collaborate effectively with peers. Seeking a part-time job to develop professional skills and contribute to a dynamic Organization. 
             </p>
         </div>
         
@@ -99,13 +99,13 @@
             <div class="col-4 col-mt-4 col-lg-4">
               <ul>
                 <li>Name               : Hridaya Akter</li>
-                <li>Fathers Name       : MD Rohul Amin Sardar</li>
+                <li>Fathers Name       : Rohul Amin</li>
                 <li>Mothers Name       : Jorina Begom</li>
-                <li>Permanent address  : Kuadang, Gopalgonj</li>
-                <li>Date of Birth      : 14 October,2000</li>
-                <li>Nationality        : Bangladeshi</li>
-                <li>Marital Status     : Married</li>
-                <li>Religion           : Muslim </li>
+                <li>Permanent address  : Kuadanga, Gopalgonj</li>
+                <li>Date of Birth      :14 October,2000</li>
+                <li>Nationality        :Bangladeshi</li>
+                <li>Marital Status     :Married</li>
+                <li>Religion           : Muslim</li>
                 <li>Email              : hridayaakter@gmail.com</li>
               </ul>
      <h1> </h1>
